# pacman

./: CHANGELOG.md  LICENSE  PacmanGame.cabal  README.md  hie.yaml
src/: Controller.hs  Main.hs  Model.hs  View.hs
