cabal-version:      3.0
name:               PacmanGame
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             aminoxol
maintainer:         38925711+aminoxol@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable PacmanGame
    import:           warnings
    main-is:          Main.hs
    other-modules:    Model,
                      View,
                      Controller
    -- other-extensions:
    build-depends:    base >=4.17 && <4.18,
                      gloss,
                      random  
    hs-source-dirs:   src
    default-language: Haskell2010
